test/studies/590o/blerner/nilClassCheck.good
A is: 1 2 3 4 5 segfault.chpl:15: error: dereferencing nil class reference
