test/studies/590o/blerner/nilClassCheck.future
feature request: runtime checks against nil pointers

This feature request posits that it's ridiculous for
a productivity-oriented language like Chapel to have
nil pointer dereferences result in a seg fault by
default -- that like bounds checking, it should guard
against this case by default and have the ability to
turn that checking off.

From Ben's mail:

I found one more bug: if you have some array of elements children :
[1..n] XmlElement, and you iterate "for child in children", you can
get a Segmentation Fault easily enough, if there are elements at the
end that haven't been initialized.  Sure, iterating over uninitialized
values is bad, but segfaults?
